// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextField simple 1`] = `
<div
  className="container"
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-sm-6 col-sm-offset-3"
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            className="form-group form-group-text"
          >
            <div
              className="form-group-inner"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <input
                className="field-text form-control"
                disabled={false}
                id={null}
                name={null}
                onChange={[Function]}
                placeholder={null}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <a
          onClick={[Function]}
          role="button"
          style={
            Object {
              "background": "#28c",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "textDecoration": "none",
              "top": 0,
            }
          }
          tabIndex="0"
        >
          Show Info
        </a>
        <div
          style={
            Object {
              "background": "white",
              "bottom": 0,
              "display": "none",
              "left": 0,
              "overflow": "auto",
              "padding": "0 40px",
              "position": "fixed",
              "right": 0,
              "top": 0,
              "zIndex": 99999,
            }
          }
        >
          <a
            onClick={[Function]}
            role="button"
            style={
              Object {
                "background": "#28c",
                "borderRadius": "0 0 0 5px",
                "color": "#fff",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "sans-serif",
                "fontSize": "12px",
                "padding": "5px 15px",
                "position": "fixed",
                "right": 0,
                "textDecoration": "none",
                "top": 0,
              }
            }
            tabIndex="0"
          >
            ×
          </a>
          <div
            style={undefined}
          >
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "backgroundColor": "#fff",
                  "border": "1px solid #eee",
                  "borderRadius": "2px",
                  "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                  "color": "#444",
                  "fontFamily": "
                    -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                    \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
                  ",
                  "fontSize": "15px",
                  "fontWeight": 300,
                  "lineHeight": 1.45,
                  "marginTop": "50px",
                  "padding": "20px 40px 40px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderBottom": "1px solid #eee",
                    "marginBottom": 10,
                    "paddingTop": 10,
                  }
                }
              >
                <h1
                  style={
                    Object {
                      "fontSize": "35px",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  TextField
                </h1>
                <h2
                  style={
                    Object {
                      "fontSize": "22px",
                      "fontWeight": 400,
                      "margin": "0 0 10px 0",
                      "padding": 0,
                    }
                  }
                >
                  simple
                </h2>
              </div>
              
              <div>
                <h1
                  style={
                    Object {
                      "borderBottom": "1px solid #EEE",
                      "fontSize": "25px",
                      "margin": "20px 0 0 0",
                      "padding": "0 0 5px 0",
                    }
                  }
                >
                  Story Source
                </h1>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        StateField
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextField
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  change()
                                </span>
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        StateField
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
              <div>
                <h1
                  style={
                    Object {
                      "borderBottom": "1px solid #EEE",
                      "fontSize": "25px",
                      "margin": "20px 0 0 0",
                      "padding": "0 0 5px 0",
                    }
                  }
                >
                  Prop Types
                </h1>
                <div>
                  <h2
                    style={
                      Object {
                        "margin": "20px 0 0 0",
                      }
                    }
                  >
                    "
                    StateField
                    " Component
                  </h2>
                  <table
                    style={
                      Object {
                        "borderCollapse": "separate",
                        "borderSpacing": "10px 5px",
                        "marginLeft": -10,
                      }
                    }
                  >
                    <thead>
                      <tr>
                        <th>
                          property
                        </th>
                        <th>
                          propType
                        </th>
                        <th>
                          required
                        </th>
                        <th>
                          default
                        </th>
                        <th>
                          description
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <td>
                          children
                        </td>
                        <td>
                          node
                        </td>
                        <td>
                          yes
                        </td>
                        <td>
                          -
                        </td>
                        <td />
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div>
                  <h2
                    style={
                      Object {
                        "margin": "20px 0 0 0",
                      }
                    }
                  >
                    "
                    TextField
                    " Component
                  </h2>
                  <table
                    style={
                      Object {
                        "borderCollapse": "separate",
                        "borderSpacing": "10px 5px",
                        "marginLeft": -10,
                      }
                    }
                  >
                    <thead>
                      <tr>
                        <th>
                          property
                        </th>
                        <th>
                          propType
                        </th>
                        <th>
                          required
                        </th>
                        <th>
                          default
                        </th>
                        <th>
                          description
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <td>
                          ckeditorCustomConfig
                        </td>
                        <td>
                          object
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              }
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          disabled
                        </td>
                        <td>
                          bool
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              false
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          label
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          name
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          onChange
                        </td>
                        <td>
                          func
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          placeholder
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          prefix
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          suffix
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          type
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            text
                            "
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          value
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextField with label 1`] = `
<div
  className="container"
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-sm-6 col-sm-offset-3"
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            className="form-group form-group-text"
          >
            <label
              className="control-label"
              htmlFor={null}
            >
              Label
            </label>
            <div
              className="form-group-inner"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <input
                className="field-text form-control"
                disabled={false}
                id={null}
                name={null}
                onChange={[Function]}
                placeholder={null}
                type="text"
                value=""
              />
              <div
                className="help-block"
              >
                <div>
                  <p>
                    This is an help text
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <a
          onClick={[Function]}
          role="button"
          style={
            Object {
              "background": "#28c",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "textDecoration": "none",
              "top": 0,
            }
          }
          tabIndex="0"
        >
          Show Info
        </a>
        <div
          style={
            Object {
              "background": "white",
              "bottom": 0,
              "display": "none",
              "left": 0,
              "overflow": "auto",
              "padding": "0 40px",
              "position": "fixed",
              "right": 0,
              "top": 0,
              "zIndex": 99999,
            }
          }
        >
          <a
            onClick={[Function]}
            role="button"
            style={
              Object {
                "background": "#28c",
                "borderRadius": "0 0 0 5px",
                "color": "#fff",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "sans-serif",
                "fontSize": "12px",
                "padding": "5px 15px",
                "position": "fixed",
                "right": 0,
                "textDecoration": "none",
                "top": 0,
              }
            }
            tabIndex="0"
          >
            ×
          </a>
          <div
            style={undefined}
          >
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "backgroundColor": "#fff",
                  "border": "1px solid #eee",
                  "borderRadius": "2px",
                  "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                  "color": "#444",
                  "fontFamily": "
                    -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                    \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
                  ",
                  "fontSize": "15px",
                  "fontWeight": 300,
                  "lineHeight": 1.45,
                  "marginTop": "50px",
                  "padding": "20px 40px 40px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderBottom": "1px solid #eee",
                    "marginBottom": 10,
                    "paddingTop": 10,
                  }
                }
              >
                <h1
                  style={
                    Object {
                      "fontSize": "35px",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  TextField
                </h1>
                <h2
                  style={
                    Object {
                      "fontSize": "22px",
                      "fontWeight": 400,
                      "margin": "0 0 10px 0",
                      "padding": 0,
                    }
                  }
                >
                  with label
                </h2>
              </div>
              
              <div>
                <h1
                  style={
                    Object {
                      "borderBottom": "1px solid #EEE",
                      "fontSize": "25px",
                      "margin": "20px 0 0 0",
                      "padding": "0 0 5px 0",
                    }
                  }
                >
                  Story Source
                </h1>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        StateField
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextField
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Label
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            helpText
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                This is an help text
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  change()
                                </span>
                              </span>
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        StateField
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
              <div>
                <h1
                  style={
                    Object {
                      "borderBottom": "1px solid #EEE",
                      "fontSize": "25px",
                      "margin": "20px 0 0 0",
                      "padding": "0 0 5px 0",
                    }
                  }
                >
                  Prop Types
                </h1>
                <div>
                  <h2
                    style={
                      Object {
                        "margin": "20px 0 0 0",
                      }
                    }
                  >
                    "
                    StateField
                    " Component
                  </h2>
                  <table
                    style={
                      Object {
                        "borderCollapse": "separate",
                        "borderSpacing": "10px 5px",
                        "marginLeft": -10,
                      }
                    }
                  >
                    <thead>
                      <tr>
                        <th>
                          property
                        </th>
                        <th>
                          propType
                        </th>
                        <th>
                          required
                        </th>
                        <th>
                          default
                        </th>
                        <th>
                          description
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <td>
                          children
                        </td>
                        <td>
                          node
                        </td>
                        <td>
                          yes
                        </td>
                        <td>
                          -
                        </td>
                        <td />
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div>
                  <h2
                    style={
                      Object {
                        "margin": "20px 0 0 0",
                      }
                    }
                  >
                    "
                    TextField
                    " Component
                  </h2>
                  <table
                    style={
                      Object {
                        "borderCollapse": "separate",
                        "borderSpacing": "10px 5px",
                        "marginLeft": -10,
                      }
                    }
                  >
                    <thead>
                      <tr>
                        <th>
                          property
                        </th>
                        <th>
                          propType
                        </th>
                        <th>
                          required
                        </th>
                        <th>
                          default
                        </th>
                        <th>
                          description
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <td>
                          ckeditorCustomConfig
                        </td>
                        <td>
                          object
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              }
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          disabled
                        </td>
                        <td>
                          bool
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              false
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          label
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          name
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          onChange
                        </td>
                        <td>
                          func
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          placeholder
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          prefix
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          suffix
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          type
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            text
                            "
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          value
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextField with suffix and prefix 1`] = `
<div
  className="container"
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <div
    className="row"
  >
    <div
      className="col-sm-6 col-sm-offset-3"
    >
      <div>
        <div
          style={
            Object {
              "position": "relative",
              "zIndex": 0,
            }
          }
        >
          <div
            className="form-group form-group-text"
          >
            <label
              className="control-label"
              htmlFor={null}
            >
              Label
            </label>
            <div
              className="form-group-inner"
              style={
                Object {
                  "display": "block",
                }
              }
            >
              <div
                className="input-group input-group-text"
              >
                <span
                  className="input-group-addon"
                >
                  Money
                </span>
                <input
                  className="field-text form-control"
                  disabled={false}
                  id={null}
                  name={null}
                  onChange={[Function]}
                  placeholder={null}
                  type="text"
                  value=""
                />
                <span
                  className="input-group-addon"
                >
                  $
                </span>
              </div>
            </div>
          </div>
        </div>
        <a
          onClick={[Function]}
          role="button"
          style={
            Object {
              "background": "#28c",
              "borderRadius": "0 0 0 5px",
              "color": "#fff",
              "cursor": "pointer",
              "display": "block",
              "fontFamily": "sans-serif",
              "fontSize": "12px",
              "padding": "5px 15px",
              "position": "fixed",
              "right": 0,
              "textDecoration": "none",
              "top": 0,
            }
          }
          tabIndex="0"
        >
          Show Info
        </a>
        <div
          style={
            Object {
              "background": "white",
              "bottom": 0,
              "display": "none",
              "left": 0,
              "overflow": "auto",
              "padding": "0 40px",
              "position": "fixed",
              "right": 0,
              "top": 0,
              "zIndex": 99999,
            }
          }
        >
          <a
            onClick={[Function]}
            role="button"
            style={
              Object {
                "background": "#28c",
                "borderRadius": "0 0 0 5px",
                "color": "#fff",
                "cursor": "pointer",
                "display": "block",
                "fontFamily": "sans-serif",
                "fontSize": "12px",
                "padding": "5px 15px",
                "position": "fixed",
                "right": 0,
                "textDecoration": "none",
                "top": 0,
              }
            }
            tabIndex="0"
          >
            ×
          </a>
          <div
            style={undefined}
          >
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "backgroundColor": "#fff",
                  "border": "1px solid #eee",
                  "borderRadius": "2px",
                  "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
                  "color": "#444",
                  "fontFamily": "
                    -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Roboto\\",
                    \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif
                  ",
                  "fontSize": "15px",
                  "fontWeight": 300,
                  "lineHeight": 1.45,
                  "marginTop": "50px",
                  "padding": "20px 40px 40px",
                }
              }
            >
              <div
                style={
                  Object {
                    "borderBottom": "1px solid #eee",
                    "marginBottom": 10,
                    "paddingTop": 10,
                  }
                }
              >
                <h1
                  style={
                    Object {
                      "fontSize": "35px",
                      "margin": 0,
                      "padding": 0,
                    }
                  }
                >
                  TextField
                </h1>
                <h2
                  style={
                    Object {
                      "fontSize": "22px",
                      "fontWeight": 400,
                      "margin": "0 0 10px 0",
                      "padding": 0,
                    }
                  }
                >
                  with suffix and prefix
                </h2>
              </div>
              
              <div>
                <h1
                  style={
                    Object {
                      "borderBottom": "1px solid #EEE",
                      "fontSize": "25px",
                      "margin": "20px 0 0 0",
                      "padding": "0 0 5px 0",
                    }
                  }
                >
                  Story Source
                </h1>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        StateField
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextField
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Label
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            prefix
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                Money
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            suffix
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                $
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  change()
                                </span>
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        StateField
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
              <div>
                <h1
                  style={
                    Object {
                      "borderBottom": "1px solid #EEE",
                      "fontSize": "25px",
                      "margin": "20px 0 0 0",
                      "padding": "0 0 5px 0",
                    }
                  }
                >
                  Prop Types
                </h1>
                <div>
                  <h2
                    style={
                      Object {
                        "margin": "20px 0 0 0",
                      }
                    }
                  >
                    "
                    StateField
                    " Component
                  </h2>
                  <table
                    style={
                      Object {
                        "borderCollapse": "separate",
                        "borderSpacing": "10px 5px",
                        "marginLeft": -10,
                      }
                    }
                  >
                    <thead>
                      <tr>
                        <th>
                          property
                        </th>
                        <th>
                          propType
                        </th>
                        <th>
                          required
                        </th>
                        <th>
                          default
                        </th>
                        <th>
                          description
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <td>
                          children
                        </td>
                        <td>
                          node
                        </td>
                        <td>
                          yes
                        </td>
                        <td>
                          -
                        </td>
                        <td />
                      </tr>
                    </tbody>
                  </table>
                </div>
                <div>
                  <h2
                    style={
                      Object {
                        "margin": "20px 0 0 0",
                      }
                    }
                  >
                    "
                    TextField
                    " Component
                  </h2>
                  <table
                    style={
                      Object {
                        "borderCollapse": "separate",
                        "borderSpacing": "10px 5px",
                        "marginLeft": -10,
                      }
                    }
                  >
                    <thead>
                      <tr>
                        <th>
                          property
                        </th>
                        <th>
                          propType
                        </th>
                        <th>
                          required
                        </th>
                        <th>
                          default
                        </th>
                        <th>
                          description
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <td>
                          ckeditorCustomConfig
                        </td>
                        <td>
                          object
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              }
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          disabled
                        </td>
                        <td>
                          bool
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#a11",
                                }
                              }
                            >
                              false
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          label
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          name
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          onChange
                        </td>
                        <td>
                          func
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          placeholder
                        </td>
                        <td>
                          string
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          prefix
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          suffix
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          type
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span
                            style={
                              Object {
                                "color": "#22a",
                                "wordBreak": "break-word",
                              }
                            }
                          >
                            "
                            text
                            "
                          </span>
                        </td>
                        <td />
                      </tr>
                      <tr>
                        <td>
                          value
                        </td>
                        <td>
                          other
                        </td>
                        <td>
                          no
                        </td>
                        <td>
                          <span>
                            <span
                              style={
                                Object {
                                  "color": "#777",
                                }
                              }
                            >
                              null
                            </span>
                          </span>
                        </td>
                        <td />
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
